# lan-party-manager

./: .gitignore  Cargo.toml
lpmng-core/: Cargo.toml
lpmng-core/.sqlx/: query-09a2cbd52c357f3de0c61292973417e0abbf618f17bd3accb48622a9e662bb6c.json  query-12718f96421a4e128175a3ce05eeb9cb979dfb457c056d069d41de70e60a44cb.json  query-1aeb7cfbaf283ddb4fe0cdc27e4d77818adc9a4acbb879654f3d5bf593a55b2d.json  query-1d06a481eb756fc31f2690d690b9020abdb7c0eb0dad04e6dfe7b085e1b3b296.json  query-3d238ffaf7c813e1e104606e5ff2a633a2bb718b59442a1130905c5b09eaeb09.json  query-4ab9d4d5ebe3c2b41cd8c33ab7f814574451d0ed60927a289a3ab747ee8e8f03.json  query-602436dd48a9e25456d6874e9fd2bb7e114b3206aa42e462b6725453fc19fa16.json  query-6dd2964e9966c794b6fa4786835b305536c321c4675752d7e295efa4778d394d.json  query-9730f8698da7ac0a87a9b000690a9fe8e46137055247ee55204e300bee7f7ddb.json  query-a394bbe93ed880cd8d56fb3c71aaae19da5b3b150d75f7daa7b8b5ed0bc099f8.json  query-d74fd14b02876149b5652cf9d91743bc08b2ba8e3b18bca8a0f7c3eb8fdb84c6.json  query-ed5b431646b03da93dafb0cc197db5294ca89a5e09ba68ae835011366e6a6d7c.json
lpmng-core/migrations/: 20221019171534_devices.sql
lpmng-core/src/: auth.rs  console.rs  db.rs  error.rs  mac.rs  main.rs
lpmng-core/src/api/: devices.rs  login.rs  mod.rs  users.rs
lpmng-core/src/model/: device.rs  login.rs  mod.rs  user.rs
lpmng-front/: Cargo.toml  build.rs  ines.toml  package-lock.json  package.json
lpmng-front/src/: index.css  index.html  index.js
lpmng-front/src/assets/: fonts.css
lpmng-front/src/components/: component.js  load.js
lpmng-front/src/components/base/button/: lpmng-button.html  lpmng-button.js
lpmng-front/src/components/base/card/: lpmng-card.html  lpmng-card.js
lpmng-front/src/components/base/checkbox/: lpmng-checkbox.html  lpmng-checkbox.js
lpmng-front/src/components/base/table/: lpmng-table.html  lpmng-table.js
lpmng-front/src/components/base/text-input/: lpmng-text-input.html  lpmng-text-input.js
lpmng-front/src/components/pages/admin/: admin-page.html  admin-page.js
lpmng-front/src/components/pages/login/: login-page.html  login-page.js
lpmng-front/src/components/pages/main/: main-page.js
lpmng-front/src/components/pages/main/internet/: main-internet.html  main-internet.js
lpmng-front/src/components/pages/no-internet/: no-internet-page.html  no-internet-page.js
lpmng-front/src/components/pages/register/: register-page.html  register-page.js
lpmng-front/src/components/router/link/: router-link.html  router-link.js
lpmng-front/src/components/router/view/: router-view.js
lpmng-front/src/models/: device.js  login.js  result.js  user.js
lpmng-front/src/services/: component-manager.js  lpmng.js  router.js  validation.js
lpmng-mq/: Cargo.toml
lpmng-mq/src/: server.rs
lpmng-router/: Cargo.toml
lpmng-router/src/: error.rs  main.rs  nfables.rs
