[package]
name = "lpmng-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.3", default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }
serde = { workspace = true }
password-auth = "1.0.0"
biscuit-auth = "5.0.0"
serde_json = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
lpmng-mq = { path = "../lpmng-mq" }
dialoguer = { version = "0.11.0", features = ["history", "completion"] }
futures = "0.3.31"
regex = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11.0", features = ["serde"] }
lazy_static = "1.5.0"
rtnetlink = "0.14.1"
netlink-packet-route = "0.19"