[package]
name = "lpmng-mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
log = "0.4.22"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
    name = "server-test"
    path = "src/bin/server-test.rs"

[[bin]]
    name = "client-test"
    path = "src/bin/client-test.rs"